--- a/app/translations/cy/LC_MESSAGES/messages.po
+++ b/app/translations/cy/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2023-02-21 16:17+0000\n"
+"POT-Creation-Date: 2023-02-22 10:46+0000\n"
 "PO-Revision-Date: 2022-11-18 18:31+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: cy\n"
@@ -372,8 +372,8 @@ msgid ""
 "Please try again later, or %(open)scontact us%(close)s if the problem "
 "continues."
 msgstr ""
-"Ceisiwch eto nes ymlaen, neu cysylltwch â ni os bydd y broblem yn parhau."
-" %(open)scontact us%(close)s \" //TODO contact u"
+"Ceisiwch eto nes ymlaen, neu %(open)scysylltwch â ni%(close)s os bydd y "
+"broblem yn parhau."
 
 #: app/templates/privacy-and-data-protection.html:5
 #: app/templates/privacy-and-data-protection.html:23
